unpackaged/main/default/objects/ERS_Watch_List__c/ERS_Watch_List__c.object-meta.xml
<CustomObject>
    <description>Tracks membership information for members on the ERS watch list.</description>
    <label>ERS Watch List Member</label>
    <nameField>
        <displayFormat>EWL-{0000}</displayFormat>
        <label>ERS Watch List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERS Watch List Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>