unpackaged/main/default/objects/ERS_Watch_List__c/fields/AAA_ACA_AssociateID__c.field-meta.xml
<CustomField>
    <fullName>AAA_ACA_AssociateID__c</fullName>
    <label>Associate Id</label>
    <length>2</length>
    <type>Text</type>
</CustomField>