unpackaged/main/default/objects/ERS_Watch_List__c/fields/AAA_ACA_Club_Code__c.field-meta.xml
<CustomField>
    <fullName>AAA_ACA_Club_Code__c</fullName>
    <label>Club Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>