unpackaged/main/default/objects/ERS_Watch_List__c/fields/AAA_ACA_MembershipID__c.field-meta.xml
<CustomField>
    <fullName>AAA_ACA_MembershipID__c</fullName>
    <label>Member ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>